chore: cleanup unused color overrides

--- a/apps/docs/src/pages/components/card.mdx
+++ b/apps/docs/src/pages/components/card.mdx
@@ -21,7 +21,7 @@ export const getStaticProps = async ({ params }) => {
   className="w-380px"
   bgcolor="atmo1"
   statusColor="positive"
-  icon={<Leaf iconSize="S" color="positive" />}
+  icon={<Leaf size="S" color="positive" />}
 >
   <HvCardHeader
     title={<HvTypography variant="title4">Schedule New Job</HvTypography>}
